update hero spacing, fix go to top margin

--- a/css/style.scss
+++ b/css/style.scss
@@ -65,7 +65,7 @@ html {
 .hero-img {
     
     img {
-        margin: 3em 0;
+        margin: 3em 0 0.2em;
     }
 }
 
@@ -161,7 +161,7 @@ html {
     display: none;
     position:fixed;
     bottom:0;
-    right:2%;
+    right:10%;
     font-size:2em;
     cursor: pointer;
 }
@@ -171,7 +171,7 @@ html {
     color:#000;
     position:fixed;
     bottom:0;
-    right:2%;
+    right:10%;
     transform: rotate(360deg);
 
 }
